cabal-version:      3.0
name:               hw0
version:            0.1.0.0
synopsis: University of Wyoming functional programming homework 0
homepage:           https://github.com/FinleyMcIlwaine/cosc3015-hw0
license:            NONE

author:             Finley McIlwaine
maintainer:         fmcilwai@uwyo.edu

executable hw0
    main-is:          Main.hs
    build-depends:    
      base -any,
      acme-missiles -any

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010
